--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-12</title>
+    <title>Sass Landing Page</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
@@ -18,7 +18,7 @@
         <header class="main-header">
             <nav class="navbar">
                 <div class="logo">
-                    <img src="./images/Logo.png" alt="" srcset="">
+                    <img class="logo-img" src="./images/Logo.png" alt="" srcset="">
                 </div>
                 <div class="list">
                     <ul class="nav-list">
